# bemo_archived

./: .gitignore  .gitmodules  CMakeLists.txt  IDEAS.md  README.md
cpp/: CMakeLists.txt
cpp/BCli/: main.cc
cpp/BCore/: API.cc  API.hh  Assert.hh  Bemo.cc  Bemo.hh  Defs.hh  Graph.cc  Graph.hh  Log.cc  Log.hh  Node.cc  Node.hh  Platform.hh  Registry.hh  Types.hh  Variant.cc  Variant.hh
cpp/BCore/connection/: AbstractConnection.cc  AbstractConnection.hh
cpp/BCore/container/: AbstractContainer.cc  AbstractContainer.hh  Container.cc  Container.hh  Graph.cc  Graph.hh  Group.cc  Group.hh  Node.cc  Node.hh
cpp/BCore/dag/: Dag.hh  DagManager.cc  DagManager.hh  DagVertex.hh  DependencyGraph.cc  DependencyGraph.hh
cpp/BCore/event/: Delegate.hh  Event.cc  Event.hh  EventDelegate.hh  EventDispatcher.hh  EventHandler.cc  EventHandler.hh  EventManager.hh
cpp/BCore/internal/: Handle.cc  Handle.hh  Object.cc  Object.hh  ObjectType.hh  Table.hh  Type.hh
cpp/BCore/managers/: AbstractManager.hh  ConnectionManager.hh  ContainerManager.cc  ContainerManager.hh  DataBlockManager.hh  GraphManager.cc  GraphManager.hh  NodeManager.cc  NodeManager.hh  NodeRegistry.hh  ObjectManager.cc  ObjectManager.hh  PlugManager.hh  PluginManager.hh
cpp/BCore/node/: MultiplyNode.cc  MultiplyNode.hh  Node.cc  Node.hh  NodeManager.cc  NodeManager.hh  NodeRegistry.cc  NodeRegistry.hh  NodeSystem.cc  NodeSystem.hh  Pow.hh  Sum.hh
cpp/BCore/object/: AbstractGraph.hh  AbstractManagedObject.hh  AbstractNode.cc  AbstractNode.hh  AbstractObject.hh  BlueprintManager.cc  BlueprintManager.hh  Connection.hh  Container.hh  DataBlock.hh  Graph.cc  Graph.hh  Handle.hh  Node.cc  Node.hh  NodeManager.cc  NodeManager.hh  NodeRegistry.cc  NodeRegistry.hh  NodeSystem.hh  Object.cc  Object.hh  ObjectID.cc  ObjectID.hh  ObjectManager.cc  ObjectManager.hh  Plug.hh  Plugin.hh  Table.hh
cpp/BCore/plug/: AbstractPlug.cc  AbstractPlug.hh  DirectionalPlug.cc  DirectionalPlug.hh  Plug.cc  Plug.hh
cpp/BCore/plugin/: Plugin.hh  PluginManager.cc  PluginManager.hh  PluginSystem.cc  PluginSystem.hh
cpp/BCore/py/: PyBemo.cc  PyNode.hh  PySystem.cc
cpp/BCore/store/: AddNode.hh  SnippetNode  SnippetNode.hh  SumNode.hh
cpp/BCore/system/: ConnectionSystem.hh  NodeRegistrySystem.hh  NodeSystem.hh  PlugSystem.cc  PlugSystem.hh  PluginSystem.hh
cpp/BCore/util/: Assert.hh  Log.hh  Platform.hh
cpp/BCore/workspace/: Workspace.cc  Workspace.hh  WorkspaceManager.cc  WorkspaceManager.hh
cpp/BPy/: AbstractProxyObject.cc  AbstractProxyObject.hh  PyAPI.cc  PyAPI.hh  PyAbstractNode.cc  PyAbstractNode.hh  PyBemo.cc  PyEnum.cc  PyGraph.cc  PyGraph.hh  PyNode.cc  PyNode.hh  PyNodeManager.hh  PyNodeRegistry.hh  PyPlug.cc  PyPlugin.cc  PyPluginManager.hh  PyPluginSystem.hh  PySystem.cc  PyWorkspace.cc  pybemo.cc  pybemo.hh
cpp/BPy/api/: PyBemo.cc
cpp/BPy/core/: PyCore.cc  PyNode.cc
cpp/BPy/store/: AddNode.py  PrintNode.py
cpp/BPy/system/: PyPluginSystem.hh
cpp/BUI/: Main.cc  Outliner.cc  Outliner.hh  Window.cc
cpp/include/: Graph.hh  Node.hh
cpp/old/BCore/: Bemo.cc  Bemo.hh
cpp/old/BCore/dag/: DagManager.cc  DagManager.hh
cpp/old/BCore/event/: Event.hh  EventDelegate.hh  EventDispatcher.hh  EventHandler.hh
cpp/old/BCore/internal/: Handle.hh  Object.hh
cpp/old/BCore/managers/: ConnectionManager.hh  ContainerManager.hh  GraphManager.hh  NodeManager.cc  NodeManager.hh  ObjectManager.hh  PlugManager.hh  PluginManager.hh
cpp/old/BCore/node/: MultiplyNode.hh
cpp/old/BCore/object/: AbstractGraph.hh  AbstractNode.cc  AbstractNode.hh  Connection.hh  Plug.hh  Plugin.hh
cpp/old/BCore/system/: ConnectionSystem.hh  NodeSystem.hh  PlugSystem.cc  PlugSystem.hh  PluginSystem.hh
cpp/old/BCore/util/: Log.hh
cpp/old/BPy/: AbstractProxyObject.hh  PyAPI.cc  PyBemo.cc  PyEnum.cc  PyGraph.hh  PyNode.cc  PyNode.hh  PyPlug.cc  PySystem.cc
cpp/old/BUI/: Main.cc  ScriptEditor.cc  Window.cc  Window.hh
cpp/src/: Graph.cc  Node.cc  pybemo.cc
cpp/src/ui/: Button.cc  Button.hh  Main.cc  Outliner.cc  Outliner.hh  ScriptEditor.hh  Window.cc  Window.hh
ext/: CMakeLists.txt
py/plugin/: node.py
py/plugins/: core.py
test/: check.py  run.py
test/cpp/: CMakeLists.txt  Common.hh
test/cpp/container/: testGraph.cc
test/cpp/internal/: testHandle.cc  testTable.cc
test/cpp/managers/: testNodeManager.cc  testObjectManager.cc  testPluginManager.cc
test/cpp/object/: testNode.cc
test/py/: main.py  test_api.py
test/py/node/: test_connections.py  test_node.py
test/py/object/: test_node.py
tools/: gensidecar.py  mockup.py
